revisions, crash images

--- a/flatiron-job/flatiron-job-talk-oct-2019.tex
+++ b/flatiron-job/flatiron-job-talk-oct-2019.tex
@@ -543,7 +543,7 @@ generated quantities {
 \item Stan and emcee for Poisson regression in LIGO:
 \vspace*{-6pt}
 \begin{center}
-\includegraphics[width=0.75\textwidth]{img/ligo-stan.png}
+% \includegraphics[width=0.75\textwidth]{img/ligo-stan.png}
 \end{center}
 \end{itemize}
 
