--- a/flatiron-job/stan-talks.sty
+++ b/flatiron-job/stan-talks.sty
@@ -1,16 +1,20 @@
-\IfFileExists{lucimatx.sty}{
-  % ----- if Lucida availalable------------------
-  \usepackage[
-    scale=0.875,
-    stdmathitalics=true,
-    stdmathdigits=true]{lucimatx}
- \linespread{1.02}
-}{
-  % ------ if Lucida not available --------------
-  \usepackage{times}
-  \usepackage{amssymb}
-}
+% \IfFileExists{lucimatx.sty}{
+%   % ----- if Lucida availalable------------------
+%   \usepackage[
+%     scale=0.875,
+%     stdmathitalics=true,
+%     stdmathdigits=true]{lucimatx}
+%  \linespread{1.02}
+% }{
+%   % ------ if Lucida not available --------------
+%   \usepackage{times}
+%   \usepackage{amssymb}
+% }
 % \usepackage{helvet}
+
+\usepackage{times}
+\usepackage{amssymb}
+
 
 \usepackage{fancyvrb}
 \usepackage{amsmath}
