first part of covid acc. talk

--- a/capp2022/capp2022.tex
+++ b/capp2022/capp2022.tex
@@ -1,7 +1,9 @@
-\documentclass[10pt]{report}
+\documentclass[9pt]{report}
 
 \usepackage{talk}
-\usepackage[export]{adjustbox}
+\usepackage{mathpazo}
+\renewcommand{\baselinestretch}{1.05}
+% \usepackage[export]{adjustbox}
 
 \newcommand{\draw}[2]{#1^{(#2)}}
 \newcommand{\displayfrac}[2]{{\displaystyle \frac{\displaystyle #1}{\displaystyle #2}}}
